# almaty3d

./: .gitignore  CMakeLists.sublime-workspace  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  README.md  readme.txt
data/gl-300/: image-2d.frag  image-2d.vert
data/gl-320/: buffer-uniform-shared.frag  buffer-uniform-shared.vert  buffer-uniform.vert  buffer-update.frag  buffer-update.vert  draw-arrays-range.frag  draw-base-vertex.frag  draw-base-vertex.vert  draw-elements-range.vert  draw-image-space.frag  draw-image-space.vert  draw-instanced.frag  draw-multiple.frag  draw-range-arrays.frag  draw-range-elements.vert  draw-without-vertex-attrib.vert  fbo-blend-blit.frag  fbo-blend-blit.vert  fbo-blend.frag  fbo-depth-multisample.frag  fbo-depth-multisample.vert  fbo-depth.frag  fbo-layered-rtt-array.frag  fbo-layered.frag  fbo-layered.geom  fbo-layered.vert  fbo-multisample-explicit-box.frag  fbo-multisample-explicit-near.frag  fbo-multisample-explicit.vert  fbo-multisample-integer.frag  fbo-rtt-multiple-output.frag  fbo-rtt-multiple-output.vert  fbo-shadow-depth.frag  fbo-shadow-depth.vert  fbo-shadow-render.frag  fbo-shadow-render.vert  fbo-srgb-blit-blend.vert  fbo-srgb-decode-blit.vert  fbo-srgb-decode.frag  fbo-srgb.frag  (+45 more)
data/gl-330/: blend-index.frag  blend-index.vert  draw-without-vertex-attrib.frag  draw-without-vertex-attrib.vert  error-sampler-gather.frag  error-sampler-offset.frag  fbo-integer-splash.frag  fbo-integer-splash.vert  flat-color.frag  flat-color.geom  flat-color.vert  flat-shading.frag  flat-shading.vert  image-2d.frag  image-2d.vert  instanced-array.frag  instanced-array.vert  mrt.frag  mrt.vert  multiple-output.frag  multiple-output.vert  multisample-explicit-box-nv.frag  multisample-explicit-near-nv.frag  multisample-explicit-texture-nv.frag  multisample-explicit-texture-nv.vert  query-conditional.vert  query-occlusion.frag  query-occlusion.vert  r2vb1.frag  r2vb1.vert  r2vb2.frag  r2vb2.vert  rtt-array.frag  rtt-array.vert  sampler-bicubic.frag  sampler.vert  smooth-shading-geom.frag  smooth-shading-geom.geom  smooth-shading-geom.vert  smooth-shading.geom  (+12 more)
data/gl-400/: double.frag  double.vert  error-fetch.frag  fbo-rtt.frag  fbo-rtt.vert  fbo-shadow-depth.frag  fbo-shadow-depth.vert  fbo-shadow-render.frag  fbo-shadow-render.vert  feedback-stream-point.frag  feedback-stream-point.vert  feedback-stream.frag  feedback-stream.vert  feedback.vert  fetch.frag  fetch.vert  flat-color.frag  flat-color.geom  flat-color.vert  image-2d.frag  (+51 more)
framework/: CMakeLists.txt  CTestTestfile.cmake  buffer.cpp  buffer.hpp  caps.cpp  caps.hpp  common.hpp  compiler.cpp  compiler.hpp  csv.cpp  csv.hpp  dsa.cpp  dsa.hpp  error.cpp  error.hpp  png.cpp  png.hpp  sementics.hpp  test.cpp  test.hpp  util.cpp  util.hpp  vertex.hpp
legacySrc/: CMakeLists.txt  gl-410-caps.cpp  loadAssImp.cpp  main.cpp
loadAssimp/: CMakeLists.txt  SampleOpenGL.c
loadFBX/: CMakeLists.txt  testFBX.cpp
loadFBX/src/: main.cxx  source_file.cpp
render/: tryCocoa.m
src/: Engine.hpp  gl-410-primitive-instanced.cpp  loadDDS.hpp  main.cpp  objloader.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  gl-300-fbo-multisample.cpp  gl-300-test-alpha.cpp  gl-320-buffer-uniform-shared.cpp  gl-320-buffer-uniform.cpp  gl-320-buffer-update.cpp  gl-320-caps.cpp  gl-320-draw-base-vertex.cpp  gl-320-draw-image-space.cpp  gl-320-draw-instanced.cpp  gl-320-draw-multiple.cpp  gl-320-draw-range-arrays.cpp  gl-320-draw-range-elements.cpp  gl-320-draw-without-vertex-attrib.cpp  gl-320-fbo-blend.cpp  gl-320-fbo-blit.cpp  gl-320-fbo-depth-multisample.cpp  gl-320-fbo-depth-stencil.cpp  gl-320-fbo-depth.cpp  gl-320-fbo-integer-blit.cpp  gl-320-fbo-integer.cpp  gl-320-fbo-layered.cpp  gl-320-fbo-multisample-explicit.cpp  gl-320-fbo-multisample-integer.cpp  gl-320-fbo-multisample.cpp  gl-320-fbo-rtt-texture-array.cpp  gl-320-fbo-rtt.cpp  gl-320-fbo-shadow.cpp  gl-320-fbo-srgb-blend.cpp  gl-320-fbo-srgb-decode-ext.cpp  gl-320-fbo-srgb.cpp  gl-320-fbo.cpp  gl-320-glsl-builtin-blocks.cpp  gl-320-glsl-cast-fail.cpp  gl-320-glsl-discard.cpp  gl-320-glsl-input-struct.cpp  gl-320-glsl-precision.cpp  gl-320-primitive-front-face.cpp  gl-320-primitive-line-msaa.cpp  (+144 more)
tutorial08/: CMakeLists.txt  tutorial08.cpp
tutorial08/common/: controls.hpp  objloader.cpp
tutorial_v0014/: CMakeLists.txt  Makefile.in
tutorial_v0014/common/: controls.cpp  framework.hpp  objloader.cpp  objloader.hpp  shader.cpp  shader.hpp  text2D.cpp  texture.cpp
tutorial_v0014/tutorial01_first_window/: CMakeLists.txt  tutorial01.cpp
tutorial_v0014/tutorial02_red_triangle/: CMakeLists.txt  tutorial02.cpp
tutorial_v0014/tutorial03_matrices/: CMakeLists.txt  tutorial03.cpp
tutorial_v0014/tutorial04_colored_cube/: CMakeLists.txt  tutorial04.cpp
tutorial_v0014/tutorial05_textured_cube/: CMakeLists.txt  tutorial05.cpp
tutorial_v0014/tutorial06_keyboard_and_mouse/: CMakeLists.txt  tutorial06.cpp
tutorial_v0014/tutorial07_model_loading/: CMakeLists.txt  tutorial07.cpp  tutorial07_model_loading
tutorial_v0014/tutorial08_basic_shading/: CMakeLists.txt  StandardShading.fragmentshader  tutorial08.cpp
tutorial_v0014/tutorial09_vbo_indexing/: CMakeLists.txt  StandardShading.fragmentshader  tutorial09.cpp  tutorial09_AssImp.cpp  tutorial09_several_objects.cpp
tutorial_v0014/tutorial10_transparency/: tutorial10.cpp
tutorial_v0014/tutorial11_2d_fonts/: CMakeLists.txt  tutorial11.cpp
tutorial_v0014/tutorial12_extensions/: CMakeLists.txt  tutorial12.cpp
tutorial_v0014/tutorial13_normal_mapping/: CMakeLists.txt  tutorial13.cpp
tutorial_v0014/tutorial14_render_to_texture/: CMakeLists.txt  tutorial14.cpp
tutorial_v0014/tutorial15_lightmaps/: CMakeLists.txt  tutorial15.cpp
tutorial_v0014/tutorial16_shadowmaps/: CMakeLists.txt  SimpleTexture.fragmentshader  tutorial16.cpp  tutorial16_SimpleVersion.cpp
tutorial_v0014/tutorial17_rotations/: CMakeLists.txt  tutorial17.cpp
tutorial_v0014/tutorial18_billboards_and_particles/: Billboard.fragmentshader  CMakeLists.txt  tutorial18_billboards.cpp  tutorial18_particles.cpp
(+246 files in other folders)
